--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
  <p>Dancing Ice Cream is Only One Fancy Food</p>
- <img src="https://images.app.goo.gl/QLCYNb2xXeeQ4uMo9" />
+ <video src="https://images.app.goo.gl/QLCYNb2xXeeQ4uMo9" />
  <p>These Bananas Like to Wear Pajamas</p>
  <img src="https://i.pinimg.com/564x/05/7e/11/057e11d45e5fcc2871c5ff8ab2eeecc5.jpg" />
  <p> This Plum Likes to Ride a Gyro Scooter</p>
