--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
  <p>Dancing Ice Cream is Only One Fancy Food</p>
- <img src="https://external-preview.redd.it/gUEJsNj6mgdhjenkKD0ASOArCcLy4dZYeZYHqPKOfeI.jpg?width=960&crop=smart&auto=webp&s=9459fbb3632462a43a3a8d776f722648736d2207" />
+ <img src="https://thumbs.gfycat.com/AdolescentHoarseKronosaurus.webp" />
  <p>These Bananas Like to Wear Pajamas</p>
  <img src="https://i.pinimg.com/564x/05/7e/11/057e11d45e5fcc2871c5ff8ab2eeecc5.jpg" />
  <p> This Plum Likes to Ride a Gyro Scooter</p>
